# gtest

./: CMakeLists.txt  Makefile  test.gitlab-ci.yml
.github/workflows/: cmake-single-platform.yml
